--- a/deploy/all/webhookExample-all.yaml
+++ b/deploy/all/webhookExample-all.yaml
@@ -84,7 +84,7 @@ metadata:
   name: webhook-example
   labels:
     app: webhook-example
-    webhook-example.agree.com/app: "false"
+    webhook-example.github.com/app: "false"
 spec:
   replicas: 1
   selector:
@@ -98,7 +98,7 @@ spec:
       serviceAccount: webhook-example
       containers:
         - name: webhook-example
-          image: harbor.k8s/agree/webhook-example:v1.0.0_202207261759
+          image: docker.io/webhook-example:v1.0.0_202207261759
           imagePullPolicy: Always
           args:
             - --namespace=webhook-example
