--- a/deploy/mutatingwebhook.yaml
+++ b/deploy/mutatingwebhook.yaml
@@ -5,7 +5,7 @@ metadata:
   labels:
     app: webhook-example
 webhooks:
-  - name: webhook-example.agree.cn
+  - name: webhook-example.github.com
     clientConfig:
       service:
         name: webhook-example
